loopwhile.LoopWhile.scala.error
Compilation error:
LoopWhile:1: error: not found: value not
while (not isFacingWall()) {forward() ;} 
       ^